--- a/index.html
+++ b/index.html
@@ -4,24 +4,115 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apple Watch</title>
+    <title>Styles Conference</title>
     <!-- FONT_FAMILY -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- HEAADER -->
-    <header class="site-header"></header>
+    <header class="site-header">
+      <div class="container">
+        <div class="header-container">
+            <a href="index.html" class="site-logo-link">
+              <div class="site-logo">STYLES <br>
+                CONFERENCE
+                </div>
+            </a>
+            <nav class="sitenav">
+              <p class="sitenav-text">August 24–26th — Chicago, IL</p>
+              <ul class="sitenav-list">
+                <li class="sitenav-item">
+                  <a href="/index.html" class="sitenav-link">HOME</a>
+                </li>
+                <li class="sitenav-item">
+                  <a href="/speakes/index.html" class="sitenav-link">SPEAKERS</a>
+                </li>
+                <li class="sitenav-item">
+                  <a href="/schedule/index.html" class="sitenav-link">SCHEDULE</a>
+                </li>
+                <li class="sitenav-item">
+                  <a href="/venue/index.html" class="sitenav-link">VENUE</a>
+                </li>
+                <li class="sitenav-item">
+                  <a href="/register/index.html" class="sitenav-link">REGISTER</a>
+                </li>
+              </ul>
+            </nav>
+        </div>
+        <div class="site-header-info">
+         <span> Dedicated to the Craft of Building Websites</span> <br>
+Every year the brightest web designers and front-end developers descend <br> on Chicago to discuss the latest tech logies. Join us this August!
+        </div>
+        <a href="/register/index.html" class="site-header-link btn-button">REGISTER NOW</a>
+      </div>
+    </header>
     <!-- MAIN -->
-    <main class="main-content"></main>
+    <main class="main-content">
+      <div class="container">
+        <div class="main-action">
+          <ul class="main-action-list">
+            <li class="main-action-item">
+              <h5 class="main-action-title">SPEAKERS</h5>
+              <a target="_blank" href="img/speakers.jpg" class="main-action-link">
+               <img src="img/speakers.jpg" alt="" class="main-action-img" width="350" height="220">
+               <h3 class="main-action-heading">World-Class Speakers
+              </h3>
+              </a>
+              <p class="main-action-text">Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+            </li>
+            <li class="main-action-item">
+              <h5 class="main-action-title">SCHEDULE</h5>
+              <a target="_blank" href="img/schedule.jpg" class="main-action-link">
+               <img src="img/schedule.jpg" alt="" class="main-action-img" width="350" height="220">
+               <h3 class="main-action-heading">Three Inspiring Days
+              </h3>
+              </a>
+              <p class="main-action-text">Enjoy three inspiring and action-packed days of tals, gatherings, and all-around good times.</p>
+            </li>
+            <li class="main-action-item">
+              <h5 class="main-action-title">VENUE</h5>
+              <a target="_blank" href="img/venue.jpg" class="main-action-link">
+               <img src="img/venue.jpg" alt="" class="main-action-img" width="350" height="220">
+               <h3 class="main-action-heading">The Chicago Theatre
+              </h3>
+              </a>
+              <p class="main-action-text">Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </main>
     <!-- FOOTER -->
-    <footer class="site-footer"></footer>
+    <footer class="site-footer">
+      <div class="container">
+        <div class="header-container footer-container">
+          <a href="index.html" class="site-logo-link">
+            <div class="site-logo site-logo-footer">&copy; Styles Conference</div>
+          </a>
+          <nav class="sitenav">
+            <ul class="sitenav-list">
+              <li class="sitenav-item">
+                <a href="index.html" class="sitenav-link">HOME</a>
+              </li>
+              <li class="sitenav-item">
+                <a href="/speakes/index.html" class="sitenav-link">SPEAKERS</a>
+              </li>
+              <li class="sitenav-item">
+                <a href="/schedule/index.html" class="sitenav-link">SCHEDULE</a>
+              </li>
+              <li class="sitenav-item">
+                <a href="/venue/index.html" class="sitenav-link">VENUE</a>
+              </li>
+              <li class="sitenav-item">
+                <a href="/register/index.html" class="sitenav-link">REGISTER</a>
+              </li>
+            </ul>
+          </nav>
+      </div>
+      </div>
+    </footer>
   </body>
 </html>
